<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nombre_app">Autenticación</string>

    <!-- Pantalla de Login (US01) -->
    <string name="etiqueta_ojo">ESTRENA ALGO QUE TE ENCANTE</string>
    <string name="titulo_login">Lo nuevo empieza contigo.</string>
    <string name="subtitulo_login">Inicia sesión y encuentra tus favoritos.</string>
    <string name="campo_usuario">Nombre de usuario</string>
    <string name="campo_usuario_ayuda">Tu nombre de usuario</string>
    <string name="campo_contrasena">Contraseña</string>
    <string name="campo_contrasena_ayuda">Tu contraseña</string>
    <string name="boton_iniciar_sesion">Iniciar sesión</string>
    <string name="pie_login">Acceso personal a tu cuenta</string>

    <string name="error_campos_vacios">Escribe tu usuario y tu contraseña.</string>
    <string name="error_credenciales">Usuario o contraseña inválidos.</string>
    <string name="error_sin_conexion">No tienes conexión. Revisa tu internet e inténtalo de nuevo.</string>
    <string name="error_generico">Ocurrió un problema. Inténtalo de nuevo.</string>
    <string name="error_usuario_no_encontrado">No pudimos identificar tu cuenta. Inténtalo de nuevo.</string>

    <!-- Pantalla Mi cuenta (US02) -->
    <string name="titulo_mi_cuenta">Mi cuenta</string>
    <string name="etiqueta_id_usuario">Identificador de usuario</string>
    <string name="etiqueta_perfil_acceso">Perfil de acceso</string>
    <string name="etiqueta_sesion">Sesión</string>
    <string name="valor_sesion_activa">Activa</string>
    <string name="nota_cerrar_sesion">Al salir, se eliminarán tus credenciales y tu carrito de este dispositivo.</string>
    <string name="boton_cerrar_sesion">Cerrar sesión</string>

    <string name="rol_administrador">Administrador</string>
    <string name="rol_cliente">Cliente</string>
    <string name="rol_auditor">Auditor</string>

    <string name="descripcion_icono_error">Ícono de error</string>
    <string name="descripcion_avatar">Iniciales del usuario</string>
</resources>